APEX-0000: CSWQ update.

--- a/docroot/sites/apex-tools/modules/custom/apex_tools_custom_quotation/templates/quotation.html.twig
+++ b/docroot/sites/apex-tools/modules/custom/apex_tools_custom_quotation/templates/quotation.html.twig
@@ -132,7 +132,7 @@
             {% if content.field_custom_quotation_worksheet is not empty %}
             <li>
               <span style="width:200px; display:inline-block; font-size:16px; font-weight:bold;">{{ 'Custom quotation worksheet' }}</span>
-              <span style="font-size:16px;">{{ content.field_custom_quotation_worksheet }}</span>
+              <span style="font-size:16px;">{{ content.field_custom_quotation_worksheet|render|striptags|trim|lower }}</span>
             </li>
             {% endif %}
         {% endif %}
