--- a/docroot/themes/custom/apex_tools/templates/content/field.html.twig
+++ b/docroot/themes/custom/apex_tools/templates/content/field.html.twig
@@ -67,13 +67,13 @@
     {% endfor %}
   {% endif %}
 {% else %}
-  <div{{ attributes.addClass(classes) }}>
-    <div{{ title_attributes.addClass(title_classes) }}>{{ label }}</div>
+  <div{{ attributes.addClass(classes) }} style="display: flex;">
+    <div{{ title_attributes.addClass(title_classes) }} style="width:200px; display:inline-block; font-size:16px; font-weight:bold;">{{ label }}</div>
     {% if multiple %}
       <div class="field__items">
     {% endif %}
     {% for item in items %}
-      <div{{ item.attributes.addClass('field__item') }}>{{ item.content }}</div>
+      <div{{ item.attributes.addClass('field__item') }} style="font-size:16px; display:inline-block;">{{ item.content }}</div>
     {% endfor %}
     {% if multiple %}
       </div>
@@ -83,8 +83,8 @@
 
 {% else %}
 
-{% for item in items %}
-	{{ item.content }}
-{% endfor %}
+  {% for item in items %}
+    {{ item.content }}
+  {% endfor %}
 
 {% endif %}
